[tool.poetry]
name = "moodtracker-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1"
checkov = "^3.2.10"
troposphere = {extras = ["policy"], version = "^4.7.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
