[tool.poetry]
name = "moodtracker-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1"
checkov = "^3.2.459"
troposphere = {extras = ["policy"], version = "^4.9.6"}
cfn-lint = "^1.26.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
